<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
                android:fontFamily="@font/claritycity_semibold"
                android:text="@string/please_read_agree_content"
                android:textColor="@color/black"
                  />

            <TextView
                android:id="@+id/termsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleView"
                android:textSize="@dimen/next_button_text_size"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/claritycity_regular"
                android:text="@string/alert_view_terms_content"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/privacyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/termsTextView"
                android:layout_marginStart="20dp"
                android:textSize="@dimen/next_button_text_size"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/claritycity_regular"
                android:text="@string/alert_view_privacy_policy"
                android:textColor="@color/black" />
        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"

            android:gravity="center"
            android:orientation="vertical">



            <TextView
                android:id="@+id/positiveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/disclaimer_ok_button"
                android:fontFamily="@font/claritycity_semibold"
                android:text="@string/agree_sign_up"
                android:textColor="#454D5A"
                android:textSize="@dimen/challenge_begin_screen_discovery_text_size"/>

            <Button
                android:id="@+id/negativeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/decline"
                android:fontFamily="@font/claritycity_medium"
                android:textColor="@color/decline_txt"
                android:textSize="@dimen/next_button_text_size"
                  />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>