<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/about_challenge_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/claritycity_extrabold"
            android:gravity="center_horizontal"
            android:text="@string/are_you_sure"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/disclaimer_title_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/dinish_regular"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="5dp"
            android:text="@string/sign_out_prompt_content"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/trail_notification_learn_more_text_size" />

        <TextView
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/disclaimer_ok_button"
            android:fontFamily="@font/claritycity_bold"
            android:paddingStart="50dp"
            android:paddingTop="10dp"
            android:paddingEnd="50dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_out_txt"
            android:textColor="@color/black"
            android:textSize="@dimen/challenge_begin_screen_discovery_text_size" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>